unpackaged/main/default/objects/litify_fin__lit_Column_Template__c/litify_fin__lit_Column_Template__c.object-meta.xml
<CustomObject>
    <description>Defines a column in a group.</description>
    <label>Column Template</label>
    <nameField>
        <label>Column Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Column Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>