unpackaged/main/default/objects/litify_fin__lit_Column_Template__c/fields/litify_fin__lit_Group_Template__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Group_Template__c</fullName>
    <description>The group this column is a part of.</description>
    <label>Group Template</label>
    <referenceTo>litify_fin__lit_Group_Template__c</referenceTo>
    <relationshipLabel>Column Templates</relationshipLabel>
    <relationshipName>Column_Templates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>