unpackaged/main/default/objects/litify_fin__lit_Column_Template__c/fields/litify_fin__lit_Has_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Has_Subtotal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this column will display a subtotal at the bottom of the group.</description>
    <label>Has Subtotal</label>
    <type>Checkbox</type>
</CustomField>