unpackaged/main/default/objects/litify_fin__lit_Column_Template__c/fields/litify_fin__lit_Is_Summary_Column__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Is_Summary_Column__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this column is the summary column for the group.</description>
    <label>Is Summary Column</label>
    <type>Checkbox</type>
</CustomField>