unpackaged/main/default/objects/litify_fin__lit_Column_Template__c/fields/litify_fin__lit_Order__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Order__c</fullName>
    <description>Defines the position of this column in the Group. 0 is the left-most value.</description>
    <label>Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>