unpackaged/main/default/objects/litify_fin__lit_Column_Template__c/fields/litify_fin__lit_Required__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, column cannot be deleted via the setup table.</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>